# devconcurrent

./: .gitignore  AGENTS.md  CONFIGURATION.md  Cargo.toml  README.md  devconcurrent.schema.json  dist-workspace.toml  flake.nix  justfile  rumdl.toml  todo.md  tombi.toml
.github/workflows/: check.yml  docker-publish.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: ansi.rs  bytes.rs  cli.rs  complete.rs  config.rs  devcontainer.rs  docker.rs  helpers.rs  lib.rs  main.rs  run.rs  state.rs  workspace.rs  worktree.rs
crates/cli/src/cli/: compose.rs  destroy.rs  exec.rs  fwd.rs  go.rs  list.rs  proxy.rs  show.rs  status.rs  up.rs
crates/cli/src/cli/proxy/: proxy_state.rs
crates/cli/src/cli/status/: data.rs
crates/cli/src/devcontainer/: dc_options.rs  forward_port.rs  proxy_options.rs  substitution.rs
crates/cli/src/docker/: compose.rs  probe.rs
crates/cli/src/run/: cmd.rs
crates/cli/src/table/: gatherer.rs  mod.rs  render.rs
crates/cli/src/workspace/: table.rs
crates/devconcurrent/: Cargo.toml
crates/devconcurrent-proxy/: Cargo.toml
crates/devconcurrent-proxy/src/: main.rs
crates/devconcurrent-service/: Cargo.toml
crates/devconcurrent-service/src/: main.rs
crates/devconcurrent/src/: cli.rs  complete.rs  config.rs  devcontainer.rs  docker.rs  main.rs  state.rs  workspace.rs  worktree.rs
crates/devconcurrent/src/cli/: destroy.rs  exec.rs  fwd.rs  show.rs  up.rs
crates/devconcurrent/src/devcontainer/: dc_options.rs  forward_port.rs  lifecycle_command.rs  proxy.rs  substitution.rs
crates/devconcurrent/src/docker/: compose.rs  probe.rs
crates/devconcurrent/src/run/: cmd.rs
crates/devconcurrent/src/workspace/: table.rs
crates/docker/: Cargo.toml
crates/docker/src/: archive.rs  client.rs  container.rs  error.rs  events.rs  exec.rs  filter.rs  images.rs  lib.rs  request_ext.rs  socket.rs  stats.rs  test_support.rs  types.rs  volumes.rs
crates/docker/src/types/: version.rs
crates/docker/tests/: create_container.rs  images.rs  inspect_container.rs  inspect_exec.rs  list_containers.rs  remove_container.rs  stats.rs  volumes.rs
crates/docker/tests/helpers/: mod.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: certs.rs  dns.rs  events.rs  http_proxy.rs  main.rs  registry.rs  routing.rs  sidecar.rs  sidecar_mode.rs  tcp_listener.rs
crates/schema-gen/: Cargo.toml  build.rs
crates/schema-gen/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/: proxy-notes.md
examples/: runner_demo.rs
schemas/: README.md  devconcurrent.schema.json
src/: archive.rs  bytes.rs  cli.rs  complete.rs  config.rs  devcontainer.rs  docker.rs  helpers.rs  lib.rs  main.rs  preflight.rs  run.rs  runner.rs  state.rs  subscriber.rs  workspace.rs  worktree.rs
src/cli/: archive.rs  compose.rs  copy.rs  destroy.rs  exec.rs  fwd.rs  go.rs  kill.rs  list.rs  new.rs  prune.rs  rename.rs  show.rs  up.rs  work.rs
src/devcontainer/: dc_options.rs  lifecycle_command.rs  port_map.rs  substitution.rs  unsupported.rs
src/docker/: compose.rs  container_group.rs  probe.rs
src/run/: cmd.rs  docker_exec.rs
src/runner/: cmd.rs  docker_exec.rs  pty.rs
src/workspace/: git_status.rs  table.rs
