[package]
name        = "devconcurrent"
version     = "0.0.13"
edition     = "2024"
repository  = "https://github.com/paholg/devconcurrent"
description = "Worktree aware devcontainer manager, for concurrent development"
homepage    = "https://github.com/paholg/devconcurrent"

[dependencies]
bollard              = "0.20.2"
cached               = { version = "0.59.0", features = ["async"] }
clap                 = { version = "4.6.1", features = ["derive"] }
clap_complete        = { version = "4.6.2", features = ["unstable-dynamic"] }
color-eyre           = "0.6.5"
config               = "0.15.22"
crossterm            = "0.29"
derive_more          = { version = "2.1.1", features = ["add", "add_assign", "sum"] }
directories          = "6.0.0"
eyre                 = "0.6.12"
futures              = "0.3.32"
gix                  = "0.82.0"
indexmap             = { version = "2.14.0", features = ["serde"] }
indicatif            = "0.18"
itertools            = "0.14.0"
jiff                 = "0.2"
owo-colors           = "4.3.0"
serde                = { version = "1.0.228", features = ["derive"] }
serde-inline-default = "1.0.1"
serde_json           = { version = "1.0.149", features = ["preserve_order"] }
serde_path_to_error  = "0.1.20"
serde_with           = "3"
shellexpand          = "3.1.2"
shlex                = "1.3.0"
tabular              = { version = "0.2.0", features = ["ansi-cell"] }
tokio                = { version = "1.52.1", features = ["full"] }
tracing              = "0.1"
tracing-indicatif    = "0.3"
tracing-subscriber   = { version = "0.3", features = ["registry"] }
vec1                 = { version = "1.12.1", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"
