[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
indexmap = { version = "2.14", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = "1"
tracing = "0.1"

[workspace.lints.rust]
warnings = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
