[package]
name = "devconcurrent"
version = "0.0.13"
edition = "2024"
description = "Worktree aware devcontainer manager, for concurrent development"
homepage = "https://github.com/paholg/devconcurrent"
repository = "https://github.com/paholg/devconcurrent"

[dependencies]
cached = { version = "0.59.0", features = ["async"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.5", features = ["unstable-dynamic"] }
color-eyre = "0.6.5"
crossterm = "0.29"
derive_more = { version = "2.1.1", features = ["add", "add_assign", "sum"] }
directories = "6.0.0"
docker = { path = "../docker" }
eyre = "0.6.12"
figment = { version = "0.10.19", features = ["json", "toml"] }
futures = "0.3.32"
gix = "0.83.0"
handlebars = "6.4.1"
indexmap = { workspace = true }
indicatif = "0.18"
itertools = "0.14.0"
jiff = "0.2"
num-bigint = "0.4.6"
owo-colors = "4.3.0"
rand = "0.10.1"
schemars = { version = "1.2.1", features = ["indexmap2", "preserve_order"] }
serde = { workspace = true }
serde-inline-default = "1.0.1"
serde_json = { workspace = true, features = ["preserve_order"] }
serde_path_to_error = "0.1.20"
serde_with = { version = "3.20", features = ["schemars_1"] }
sha2 = "0.11.0"
shared = { path = "../shared", version = "0.0.0" }
shellexpand = "3.1.2"
shlex = "2.0.1"
tabular = { version = "0.2.0", features = ["ansi-cell"] }
tokio = { workspace = true, features = ["full"] }
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = { workspace = true }
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry"] }
vec1 = { version = "1.12.1", features = ["serde"] }
winnow = "1.0.3"

[dev-dependencies]
tempfile = { workspace = true }
