[package]
name = "docker"
version = "0.0.0"
edition = "2024"
description = "Minimal client for the Docker / Podman Engine API"
publish = false

[dependencies]
bytes = "1.11"
futures-util = "0.3"
indexmap = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = "0.9"
tokio = { workspace = true, features = ["fs", "net", "process"] }
tracing = { workspace = true }

[features]
# Compile the integration tests in `tests/`. These talk to a real docker (or
# podman-as-docker) daemon and would fail in environments without one (e.g.
# the nix flake check sandbox). Off by default; enabled in CI and locally
# when you want the live coverage.
docker-tests = []

[dev-dependencies]
rand = "0.10.1"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
