[package]
name = "devconcurrent-proxy"
version = "0.0.13"
edition = "2024"
description = "DNS resolver for devconcurrent devcontainers"
publish = false

[dependencies]
async-trait = "0.1.89"
docker = { path = "../docker", version = "0.0.0" }
eyre = "0.6.12"
futures-util = "0.3.32"
handlebars = "6.4.1"
hickory-proto = "0.26.1"
hickory-server = "0.26.1"
indexmap.workspace = true
rcgen = { version = "0.14.8", features = ["pem", "x509-parser"] }
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26.4"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
