[package]
name = "devconcurrent-proxy"
version = "0.0.13"
edition = "2024"
description = "DNS resolver for devconcurrent devcontainers"
publish = false

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
axum-reverse-proxy = { version = "1.3.0", default-features = false }
docker = { path = "../docker", version = "0.0.0" }
eyre = "0.6.12"
futures-util = "0.3.32"
handlebars = "6.4.1"
hickory-proto = "0.26.1"
hickory-server = "0.26.1"
http = "1.4.0"
hyper = { version = "1.9.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["service", "tokio"] }
indexmap.workspace = true
rcgen = { version = "0.14.8", features = ["pem", "x509-parser"] }
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26.4"
tower-http = { version = "0.6.11", features = ["set-header"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
