[package]
name = "shared"
version = "0.0.0"
edition = "2024"
description = "Wire format types shared between the devconcurrent CLI and the devconcurrent-proxy service"
publish = false

[dependencies]
handlebars = "6.4.1"
indexmap = { workspace = true }
schemars = { version = "1.2.1", features = ["indexmap2", "preserve_order"] }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
